# wishlist

./: .gitignore  docker-compose.yml  dockerfile  main.py  pyproject.toml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014.edgeql  00015.edgeql  00016.edgeql  00017.edgeql
tests/: conftest.py  test_drafts.py  test_list.py  test_social_media.py  test_user.py  utils.py
tests/edgedb_cli/: __init__.py
tests/fixtures/: app.py  database.py  drafts.py  faker.py  lists.py  third_party_social_media.py  user.py
wishlist/: __init__.py  config.py  database.py  exceptions.py  security.py  view.py
wishlist/endpoints/: __init__.py  auth.py  item.py  list.py  metadata.py  myself.py  user.py
wishlist/query/: clear_items_in_list.edgeql  create_allowed_social_media.edgeql  create_list.edgeql  create_list_draft.edgeql  create_list_item.edgeql  create_list_item_draft.edgeql  create_user.edgeql  create_user_social_media.edgeql  delete_draft_item.edgeql  delete_list_draft.edgeql  delete_users_social_media.edgeql  get_allowed_social_media.edgeql  get_draft_item.edgeql  get_draft_owned_by_user.edgeql  get_list.edgeql  get_list_by_slug.edgeql  get_user_by_slug.edgeql  get_user_credentials.edgeql  get_user_detailed.edgeql  get_user_draft_count.edgeql  get_user_social_media.edgeql  get_users.edgeql  get_users_by_name.edgeql  get_users_list_drafts.edgeql  get_users_lists.edgeql  update_item_draft.edgeql  (+2 more)
(+7 files in other folders)
